# MPCC

C++/: .gitignore  CMakeLists.txt  config.h  debug.txt  install.sh  main.cpp  panda_vis.ipynb  panda_vis.py  simulation.py  types.cpp  types.h
C++/Constraints/: bounds.cpp  bounds.h  constraints.cpp  constraints.h
C++/Constraints/SelfCollision/: SelfCollisionModel.h
C++/Constraints/SelfCollision/NNmodel/: self_collision.pkl
C++/Constraints/SelfCollision/NNmodel/parameter/: bias_0.txt  bias_1.txt  weight_0.txt  weight_1.txt
C++/Cost/: cost.cpp  cost.h
C++/Interfaces/: hpipm_interface.cpp  hpipm_interface.h  osqp_interface.cpp  osqp_interface.h  solver_interface.h
C++/MPC/: mpc.cpp  mpc.h
C++/Model/: model.cpp  model.h  robot_data.h  robot_model.cpp  robot_model.h  tempCodeRunnerFile.h
C++/Params/: bounds.json  config.json  cost.json  model.json  normalization.json  params.cpp  params.h  track.cpp  track.h  track.json  track.py  track_from_letter.py
C++/Spline/: arc_length_spline.cpp  arc_length_spline.h  cubic_spline.cpp  cubic_spline_rot.cpp  cubic_spline_rot.h
C++/Tests/: constraints_test.h  cost_test.h  main_test.cpp  model_integrator_test.h  robot_model_test.h  self_collision_test.h  spline_test.h
Matlab/: simulation.m
